--- a/news.html
+++ b/news.html
@@ -6,8 +6,8 @@ published: true
 ---
 <div>
 <h2>Meetups</h2>
-<p>We congregate monthly to showcase, learn, share, & network. We meet on the 3rd Thursday of every month in Long Beach. Please, RSVP to meetups at [www.meetup.com/lbtech](http://www.meetup.com/lbtech).</p>
-<p>In addition, we gather weekly on Saturday mornings for some __code & coffee,__ a series of meetups hosted by [MADE in long beach](http://www.madelb.com/), Downtown on Pine [map](https://goo.gl/maps/TRMIp).  It's a public place to gather and work on your projects with other locals in a loose & relaxed.</p>
+<p>We congregate monthly to showcase, learn, share, & network. We meet on the 3rd Thursday of every month in Long Beach. Please, RSVP to meetups at <a href="http://www.meetup.com/lbtech">www.meetup.com/lbtech</a>.</p>
+<p>In addition, we gather weekly on Saturday mornings for some __code & coffee,__ a series of meetups hosted by <a href="http://www.madelb.com/">MADE in long beach</a>, downtown on Pine <a href="https://goo.gl/maps/TRMIp" target="_blank">(map)</a>.  It's a public place to gather and work on your projects with other locals in a loose & relaxed.</p>
 </div>
 <h2>Upcoming and Past Meetups</h3>
 <div class="posts">
