--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@ published: true
 <div>
 <h2>Meetups</h2>
 <p>We congregate monthly to showcase, learn, share, & network. We meet on the 3rd Thursday of every month in Long Beach. RSVP at <a href="http://www.meetup.com/lbtech">www.meetup.com/lbtech</a>.</p>
-<p>In addition, we gather weekly on Saturday mornings for some __code & coffee,__ a series of meetups hosted by <a href="http://www.madelb.com/">MADE in long beach</a>. It's a public place to gather and work on your own projects while surrounded with other local nerds.  It's loose, relaxed, and fun.</p>
+<p>In addition, we gather weekly on Saturday mornings for some <strong>code & coffee</strong>, a series of meetups hosted by <a href="http://www.madelb.com/">MADE in long beach</a>. It's a public place to gather and work on your own projects while surrounded with other local nerds.  It's loose, relaxed, and fun.</p>
 </div>
 <h2>Upcoming and Past Meetups</h3>
 <div class="posts">
