feat: twitter embed highlight block

--- a/news.html
+++ b/news.html
@@ -4,10 +4,11 @@ title: About
 permalink: /news/
 published: true
 ---
-<div>
+<div class="info">
 <h2>Meetups</h2>
-<p>We congregate monthly to showcase, learn, share, & network. We meet on the 3rd Thursday of every month in Long Beach. RSVP at <a href="http://www.meetup.com/lbtech">www.meetup.com/lbtech</a>.</p>
-<p>In addition, we gather weekly on Saturday mornings for some <strong>code & coffee</strong>, a series of meetups hosted by <a href="http://www.madelb.com/">MADE in long beach</a>. It's a public place to gather and work on your own projects while surrounded with other local nerds.  It's loose, relaxed, and fun.</p>
+<div class="twitter-embedded">{{ site.twitter.highlight }}</div>
+<p>We congregate monthly to showcase, learn, share, & network. We meet on the 3rd Thursday of every month in Long Beach. Please, join us.</p>
+<p>We also gather weekly on saturday mornings for some code & coffee on Pine Street.  It's typically very loose & relaxed.</p>
 </div>
 <h2>Upcoming and Past Meetups</h3>
 <div class="posts">
@@ -24,3 +25,4 @@ published: true
     </article>
   {% endfor %}
 </div>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
