feat: new url format and add redirects

--- a/meetup.html
+++ b/meetup.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: About
-redirect_from: "/news/"
-permalink: /meetups/
+redirect_from: ["/news/", "/meetups/"]
+permalink: "/meetup/"
 published: true
 ---
 <div class="info">
